# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/DeriveInput/: debug-03  debug-04  debug-05  debug-07  debug-08
debug/src/: lib.rs
