[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1.0.92", features = ["proc-macro"]}
quote = { version = "1.0.37"}
syn = { version = "2.0.90", features = ["extra-traits"]}
